# gifdome

./: README.md
bot/: .gitignore  Cargo.toml  config.example.toml  fingerprints.db  schema.sql
bot/combine/: 1f170.y4m.ffindex  1f171.y4m.ffindex  combine.vpy
bot/macros/: Cargo.toml
bot/macros/src/: lib.rs  sql_enum.rs
bot/src/: animation.rs  command.rs  config.rs  db.rs  lib.rs  main.rs  scheduled.rs  server.rs  tournament.rs  util.rs  webhook.rs
client/: package.json  pnpm-lock.yaml
client/src/: app.html
client/src/lib/components/: Animation.svelte
client/src/lib/styles/: globals.scss  main.scss
client/src/routes/: +page.svelte
telegram-bot/: .gitignore  config.example.toml  gifdome-bot.service  pyproject.toml  reset.sql  run  schema.sql  stickerdome-bot.service  utils.py
telegram-bot/bot/: __main__.py  utils.py
www-backend/: pyproject.toml  run  uwsgi.yaml
www-backend/app/: __init__.py  api_v1.py
www-frontend/: package.json  pnpm-lock.yaml  svelte.config.js
www-frontend/src/: app.html
www-frontend/src/lib/: utils.ts
www-frontend/src/lib/components/: GIF.svelte
www-frontend/src/routes/: __layout.svelte  index.svelte
