[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
macros = { path = "macros" }

chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
clokwerk = "0.4.0"
deadpool-postgres = "0.10.5"
frankenstein = { version = "0.25.0", default-features = false, features = ["async-http-client"] }
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["server", "stream"] }
once_cell = "1.17.1"
poem = "1.3.55"
postgres-types = { version = "0.2.5", features = ["derive", "with-chrono-0_4"] }
rand = "0.8.5"
regex = "1.8.1"
reqwest = "0.11.17"
secstr = "0.5.1"
serde = "1.0.160"
serde_json = "1.0.96"
shell-quote = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
time-humanize = "0.1.3"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
toml = "0.7.3"
